crates/ditto-checker/tests/golden/type-errors/module_not_found.ditto
module Test exports (..);

import Missing.Module;
